--- a/Naya-Notes/style.css
+++ b/Naya-Notes/style.css
@@ -40,3 +40,31 @@ body {
   text-decoration: line-through;
   color: gray;
 }
+.login-container {
+  background-color: #ffffff;
+  padding: 30px;
+  width: 300px;
+  margin: 100px auto;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+}
+
+.login-container h2 {
+  margin-bottom: 20px;
+}
+
+#login-form input {
+  width: 90%;
+  padding: 10px;
+  margin: 10px 0;
+}
+
+#login-form button {
+  width: 100%;
+  padding: 10px;
+  background-color: #f1c40f;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  margin-top: 10px;
+}
